--- a/postgress_sql/pyproject.toml
+++ b/postgress_sql/pyproject.toml
@@ -9,10 +9,13 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.16.4",
-    "fastapi>=0.116.1",
+    "fastapi[all]>=0.116.1",
+    "passlib>=1.7.4",
     "psycopg2>=2.9.10",
     "psycopg2-binary>=2.9.10",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.43",
 ]
 
